# Live-Matches

./: .gitignore  Dockerfile  LOCALNET.md  README.md  SUBMISSION.md  compose.yaml  deploy-to-localnet.sh  git-push.ps1  index.html  package-lock.json  pnpm-lock.yaml  run.bash  setup-localnet.sh  video_script.md  vite.config.ts
linera-backend/: Dockerfile  README.md  docker-compose.yml  railway.toml  start.sh
linera-contracts/live-predict/: Cargo.toml
linera-contracts/live-predict/src/: contract.rs  lib.rs  state.rs
src/components/betting/: BettingSlip.tsx
src/components/layout/: Header.tsx
src/components/matches/: MatchCard.tsx
src/contexts/: WalletContext.tsx
src/hooks/: useLinera.ts  useMatches.ts
src/lib/: checko.ts  constants.ts  linera.ts  marketService.ts
src/pages/: Landing.tsx  Leaderboard.tsx  LiveMatch.tsx  Matches.tsx  WalletDashboard.tsx
supabase/functions/esports-data/: index.ts
