[package]
name = "live-predict"
version = "0.1.0"
edition = "2021"
description = "Live Play Predictor - Real-time micro-betting for esports on Linera"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = "=7.0.17"
async-graphql-value = "=7.0.17"
async-graphql-parser = "=7.0.17"
serde = { version = "1.0", features = ["derive"] }
linera-sdk = "0.15.5"
thiserror = "1.0"

[dev-dependencies]
linera-sdk = { version = "0.15.5", features = ["test"] }
tokio = { version = "1", features = ["rt", "macros"] }

[[bin]]
name = "live-predict_contract"
path = "src/contract.rs"

[[bin]]
name = "live-predict_service"
path = "src/service.rs"
